feat: add configurable select attributes
